--- a/src/pages/[section]/index.astro
+++ b/src/pages/[section]/index.astro
@@ -47,7 +47,7 @@ const sortedPosts = posts.sort(
               <img 
                 src={post.data.heroImage} 
                 alt="" 
-                class="w-full h-48 object-cover"
+                class="w-full object-contain"
               />
             )}
             <div class="p-4">
