--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,13 +11,13 @@ type Props = CollectionEntry<'general'>['data'] |
              CollectionEntry<'bible'>['data'] | 
              CollectionEntry<'language'>['data'];
 
-const { title, description, pubDate, updatedDate, heroImage, frontmatter } = Astro.props as any;
+const { title, description, pubDate, updatedDate, category, heroImage, frontmatter } = Astro.props as any;
 ---
 <BaseLayout title={title} description={description}>
   <article class="prose lg:prose-xl dark:prose-dark mx-auto">
     <!-- <HeroImage 
       title={title}
-      category='blog'
+      category={category}
       date={new Date(pubDate)}
     /> -->
     <h1 class="text-4xl font-bold mb-4">{title}</h1>
